--- a/Doc_HTML/DrawBoard$.html
+++ b/Doc_HTML/DrawBoard$.html
@@ -202,7 +202,7 @@
       </h4>
       <p class="comment cmt">The GridPanel with every grid of the game, useful for drawing every amount of grids.</p>
     </li><li name="DrawBoard.Header" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="HeaderextendsGridPanel"></a>
+      <a id="HeaderextendsGridBagPanel"></a>
       <a id="Header:Header"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -210,7 +210,20 @@
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a href="DrawBoard$$Header.html"><span class="name">Header</span></a><span class="result"> extends <span class="extype" name="scala.swing.GridPanel">GridPanel</span></span>
+        <a href="DrawBoard$$Header.html"><span class="name">Header</span></a><span class="result"> extends <span class="extype" name="scala.swing.GridBagPanel">GridBagPanel</span></span>
+      </span>
+      </h4>
+      
+    </li><li name="DrawBoard.Header1" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="Header1extendsGridPanel"></a>
+      <a id="Header1:Header1"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">class</span>
+      </span>
+      <span class="symbol">
+        <a href="DrawBoard$$Header1.html"><span class="name">Header1</span></a><span class="result"> extends <span class="extype" name="scala.swing.GridPanel">GridPanel</span></span>
       </span>
       </h4>
       <p class="comment cmt">Defines a little menu to save, start a new game, come back to the main menu and quit Ksparov</p>
