--- a/Doc_HTML/DrawParameters$$ComeBack.html
+++ b/Doc_HTML/DrawParameters$$ComeBack.html
@@ -729,6 +729,19 @@
       </span>
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>UIElement</dd></dl></div>
+    </li><li name="DrawParameters.ComeBack#fun_cb" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="fun_cb:Unit"></a>
+      <a id="fun_cb:Unit"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">fun_cb</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+      </span>
+      </h4>
+      
     </li><li name="scala.AnyRef#getClass" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="getClass():Class[_]"></a>
       <a id="getClass():Class[_]"></a>
