--- a/Doc_HTML/package.html
+++ b/Doc_HTML/package.html
@@ -72,6 +72,19 @@
       </h4>
       <p class="comment cmt">The class for AI players
 </p>
+    </li><li name="_root_.AI2" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="AI2extendsPlayer"></a>
+      <a id="AI2:AI2"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">class</span>
+      </span>
+      <span class="symbol">
+        <a href="AI2.html"><span class="name">AI2</span></a><span class="result"> extends <a href="Player.html" class="extype" name="Player">Player</a></span>
+      </span>
+      </h4>
+      
     </li><li name="_root_.AIMoveThread" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="AIMoveThreadextendsThread"></a>
       <a id="AIMoveThread:AIMoveThread"></a>
@@ -279,7 +292,20 @@
 
         <div id="values" class="values members">
               <h3>Value Members</h3>
-              <ol><li name="_root_.Aux" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+              <ol><li name="_root_.AlphaBeta" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="AlphaBeta"></a>
+      <a id="AlphaBeta:AlphaBeta"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="AlphaBeta$.html"><span class="name">AlphaBeta</span></a>
+      </span>
+      </h4>
+      <p class="comment cmt"></p>
+    </li><li name="_root_.Aux" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="Aux"></a>
       <a id="Aux:Aux"></a>
       <h4 class="signature">
@@ -292,6 +318,19 @@
       </span>
       </h4>
       <p class="comment cmt">Auxiliary and general methods.</p>
+    </li><li name="_root_.BoardsT" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="BoardsT"></a>
+      <a id="BoardsT:BoardsT"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="BoardsT$.html"><span class="name">BoardsT</span></a>
+      </span>
+      </h4>
+      <p class="comment cmt">Different initial configurations for testing</p>
     </li><li name="_root_.Checkmate" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="Checkmate"></a>
       <a id="Checkmate:Checkmate"></a>
@@ -370,6 +409,19 @@
       </span>
       </h4>
       <p class="comment cmt">Object to draw the menu for the game selection : Human vs Human, AI vs AI or AI vs Human.</p>
+    </li><li name="_root_.DrawGameSelectionGnuChess" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="DrawGameSelectionGnuChess"></a>
+      <a id="DrawGameSelectionGnuChess:DrawGameSelectionGnuChess"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="DrawGameSelectionGnuChess$.html"><span class="name">DrawGameSelectionGnuChess</span></a>
+      </span>
+      </h4>
+      
     </li><li name="_root_.DrawMenu" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="DrawMenu"></a>
       <a id="DrawMenu:DrawMenu"></a>
@@ -409,6 +461,32 @@
       </span>
       </h4>
       <p class="comment cmt">Draws the menus used to save games.</p>
+    </li><li name="_root_.Evals" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="Evals"></a>
+      <a id="Evals:Evals"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="Evals$.html"><span class="name">Evals</span></a>
+      </span>
+      </h4>
+      <p class="comment cmt">Stores the different evaluation functions</p>
+    </li><li name="_root_.FEN" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="FEN"></a>
+      <a id="FEN:FEN"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="FEN$.html"><span class="name">FEN</span></a>
+      </span>
+      </h4>
+      <p class="comment cmt">FEN notation</p>
     </li><li name="_root_.Ksparov" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="Ksparov"></a>
       <a id="Ksparov:Ksparov"></a>
@@ -461,6 +539,19 @@
       </span>
       </h4>
       <p class="comment cmt">Defines methods and variables for the parameter</p>
+    </li><li name="_root_.Pipe" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="Pipe"></a>
+      <a id="Pipe:Pipe"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="Pipe$.html"><span class="name">Pipe</span></a>
+      </span>
+      </h4>
+      <p class="comment cmt">Pipe implementation in Scala.</p>
     </li><li name="_root_.Save" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="Save"></a>
       <a id="Save:Save"></a>
