--- a/Doc_HTML/Player.html
+++ b/Doc_HTML/Player.html
@@ -45,7 +45,7 @@
           <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div><div class="toggleContainer block">
           <span class="toggle">Known Subclasses</span>
-          <div class="subClasses hiddenContent"><a href="AI.html" class="extype" name="AI">AI</a>, <a href="Human.html" class="extype" name="Human">Human</a>, <a href="Load$$Reproducer.html" class="extype" name="Load.Reproducer">Reproducer</a></div>
+          <div class="subClasses hiddenContent"><a href="AI.html" class="extype" name="AI">AI</a>, <a href="AI2.html" class="extype" name="AI2">AI2</a>, <a href="Human.html" class="extype" name="Human">Human</a>, <a href="Pipe$$PipePlayer.html" class="extype" name="Pipe.PipePlayer">PipePlayer</a>, <a href="Load$$Reproducer.html" class="extype" name="Load.Reproducer">Reproducer</a></div>
         </div></div>
         
 
