--- a/Doc_HTML/package.html
+++ b/Doc_HTML/package.html
@@ -84,7 +84,7 @@
         <a href="AI2.html"><span class="name">AI2</span></a><span class="result"> extends <a href="Player.html" class="extype" name="Player">Player</a></span>
       </span>
       </h4>
-      
+      <p class="comment cmt">The IA player which uses alphabeta</p>
     </li><li name="_root_.AIMoveThread" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="AIMoveThreadextendsThread"></a>
       <a id="AIMoveThread:AIMoveThread"></a>
@@ -304,7 +304,7 @@
         <a href="AlphaBeta$.html"><span class="name">AlphaBeta</span></a>
       </span>
       </h4>
-      <p class="comment cmt"></p>
+      <p class="comment cmt">Contains the alphabeta functions which implement the alphabeta algorithm</p>
     </li><li name="_root_.Aux" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="Aux"></a>
       <a id="Aux:Aux"></a>
